desafios infra/Terraform/instanciaec2.tf

resource "aws_instance" "web" {

  ami = var.instance_ami
  instance_type = var.instance_type
  tags = var.instance_tags
  #security_groups = [ "value" ]
}
